# iron-brick

./: .gitattributes  Cargo.toml  README.org  Rocket.toml  database.sqlite  missions.yaml
cli/: Cargo.toml  missions.json
cli/src/: main.rs
lib/: Cargo.toml
migrations/2020-09-29-201452_create_users/: up.sql
missions_lib/: Cargo.toml  missions.json
missions_lib/src/: lib.rs
src/: lib.rs  main.rs  models.rs  schema.rs  users.rs
src/form/: models.rs
templates/: footer.hbs  index.hbs  layout.hbs  nav.hbs
web/: Cargo.toml
web/src/: main.rs
web/templates/: index.hbs
