[package]
name = "iron-brick"
version = "0.1.0"
authors = ["Harry Tucker <harrytuckerubuntu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket-include-static-resources = "0.9.5"
quicli = "0.4"
structopt = "0.2"

diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
serde_yaml = "0.8.13"
failure = "0.1.8"
clap = "2.33.3"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "handlebars_templates", "diesel_sqlite_pool"]

[lib]
name = "lib"
path = "src/lib.rs"
