[package]
name = "web"
version = "0.1.0"
authors = ["Harry Tucker <harrytuckerubuntu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "handlebars_templates"]

[dependencies.missions_lib]
path = "../missions_lib"
